# portshare

./: CREDITS  Makefile.in  README  aix-dev.c  config.guess  configure.in  depends  hpux-dev.c  linux-dev.c  make-dist  measure.c  misc.c  portshare-devices  portshare-ser-cli.c  portshare-serial-client  portshare-serial-client.spec.in  portshare-stty  sco-dev.c  sock.c  solaris-dev.c  system.c  telnet.c  tsrio.c  unixware-dev.c
debian/: control  rules
inc/: control.h  sock.h  telnet.h
libcsc/: Makefile.in  depends  libportshare-ser-cli.c
man/: portshare-devices.5  portshare-ser-cli.8  portshare-serial-client.8
sun/: Makefile  pkginfo.in  prototype
